@@ -1,3 +1,10 @@
+2004-05-14  Paolo Carlini  <pcarlini@suse.de>
+	    Ivan Godard  <igodard@pacbell.net>
+
+	PR libstdc++/15361
+	* include/std/std_bitset.h (_Base_bitset<_Nw>::_M_do_find_next): Fix.
+	* testsuite/23_containers/bitset/ext/15361.cc: New.
+
 2004-05-13  Benjamin Kosnik  <bkoz@redhat.com>
 
 	PR libstdc++/15046
